@@ -1,3 +1,8 @@
+2012-03-10  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/52469
+	* gfortran.dg/proc_ptr_34.f90: New.
+
 2012-03-07  Jason Merrill  <jason@redhat.com>
 
 	PR c++/52521
